--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -43,5 +43,46 @@
     <string name="forgot_password_">Forgot Password?</string>
     <string name="don_t_have_an_account_">Don\'t have an Account?</string>
     <string name="register">Register</string>
+    <string name="confirm_email_id">Confirm Email Id</string>
+    <string name="display_name">Display Name</string>
+    <string name="select_country">Select Country</string>
+    <string name="enter_mobile_number">Enter Mobile Number</string>
+    <string name="i_accept_to_the_terms_of_use_listing_policy_and_renting_policy_of_sabrentkaro">I accept to the Terms of Use, Listing Policy and Renting Policy of SabRentKaro</string>
+    <string name="generate_otp">Generate OTP</string>
+    <string name="start_date">Start Date</string>
+    <string name="select_start_date">Select Start Date</string>
+    <string name="select_end_date">Select End Date</string>
+    <string name="end_date">End Date</string>
+    <string name="next">Next</string>
+    <string name="shipping_address">Shipping Address</string>
+    <string name="address">Address</string>
+    <string name="city_town">City/Town</string>
+    <string name="state">State</string>
+    <string name="pin_code">Pincode</string>
+    <string name="phone">Phone</string>
+    <string name="documents">Documents</string>
+    <string name="pan_card">Pan Card</string>
+    <string name="aadhar_card">Aadhar Card</string>
+    <string name="pan_card_number">Pan Card Number</string>
+    <string name="aadhar_card_name">Aadhar Card Name</string>
+    <string name="aadhar_card_number">Aadhar Card Number</string>
+    <string name="select_document">Select Document</string>
+    <string name="btn_continue">Continue</string>
+    <string name="summary">Summary</string>
+    <string name="total_cost">Total Cost</string>
+    <string name="rental_period_in_days_">Rental Period(in Days)</string>
+    <string name="description">Description</string>
+    <string name="from_date">From Date</string>
+    <string name="to_date">To Date</string>
+    <string name="cost_type_summary">Cost Type Summary</string>
+    <string name="product_rental_value">Product Rental Value</string>
+    <string name="per_day_cost">Per Day Cost</string>
+    <string name="per_month_cost">Per Month Cost</string>
+    <string name="per_week_cost">Per Week Cost</string>
+    <string name="facilitation_charges">Facilitation Charges</string>
+    <string name="cost">Cost</string>
+    <string name="service_tax">Service Tax</string>
+    <string name="logistics_cost">Logistics Cost</string>
+    <string name="the_product_rental_process_will_start_only_after_we_verify_your_details_thanks_for_helping_us_build_a_trusted_platform_">The product rental process will start only after we verify your details. Thanks for helping us build a trusted platform!</string>
 
 </resources>
