All Changes Done
Displayed Capacity and Tonnage in List

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -87,5 +87,6 @@
     <string name="week_cost">Week Cost</string>
     <string name="month_cost">Month Cost</string>
     <string name="post_ad">Post Ad</string>
+    <string name="tonnage">Tonnage</string>
 
 </resources>
