Implemented Post Ad Screens & Desigining
Designed and implemented Post Ad

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -88,5 +88,51 @@
     <string name="month_cost">Month Cost</string>
     <string name="post_ad">Post Ad</string>
     <string name="tonnage">Tonnage</string>
+    <string name="post_my_ad">Post My Ad</string>
+    <string name="what_would_you_like_to_post_an_ad_for_">What would you like to Post an Ad for?</string>
+    <string name="select_product_category">Select Product Category</string>
+    <string name="select_product_sub_category">Select Product Sub Category</string>
+    <string name="title_for_your_ad_">Title for your Ad*</string>
+    <string name="enter_title">Enter Title</string>
+    <string name="upload_photos_of_your_product">Upload Photos of your Product</string>
+    <string name="short_descrption_of_your_product">Short Descrption of your Product</string>
+    <string name="enter_short_description">Enter Short Description</string>
+    <string name="rate_your_product_condition">Rate your Product Condition</string>
+    <string name="additional_details">Additional Details</string>
+    <string name="any_instructions_to_be_followed_while_using_your_product_">Any instructions to be followed while using your product?</string>
+    <string name="enter_instructions">Enter Instructions</string>
+    <string name="any_other_stuff_in_the_package_">Any other Stuff in the Package?</string>
+    <string name="enter_stuff">Enter Stuff</string>
+    <string name="control_type_and_capacity">Control, Type and Capacity</string>
+    <string name="select_control">Select Control</string>
+    <string name="select_type">Select Type</string>
+    <string name="select_capacity">Select Capacity</string>
+    <string name="how_much_did_you_get_it_for_">How much did you get it for?*</string>
+    <string name="enter_purchased_cost">Enter Purchased Cost</string>
+    <string name="how_much_do_you_want_to_rent_it_for_">How much do you want to rent it for?*</string>
+    <string name="how_much_quantity_do_you_want_to_put_for_rent_">How much quantity do you want to put for rent?*</string>
+    <string name="enter_rent_cost">Enter Rent Cost</string>
+    <string name="enter_monthly_rent_cost">Enter Monthly Rent Cost</string>
+    <string name="enter_weekly_rent_cost">Enter Weekly Rent Cost</string>
+    <string name="enter_daily_rent_cost">Enter Daily Rent Cost</string>
+    <string name="how_much_security_deposit_would_you_like_to_collect_per_product_">How much security deposit would you like to collect per product?</string>
+    <string name="enter_security_deposit">Enter Security Deposit</string>
+    <string name="contact_number">Contact Number</string>
+    <string name="clear">Clear</string>
+    <string name="documents_address">Documents &amp; Address</string>
+    <string name="document_type">Document Type</string>
+    <string name="product_address_is_same_as_current_address_">Product address is same as current address.</string>
+    <string name="enter_address">Enter Address</string>
+    <string name="cancel">Cancel</string>
+    <string name="calendar_preferences">Calendar Preferences</string>
+    <string name="know_more">Know More</string>
+    <string name="location_preferences">Location Preferences</string>
+    <string name="in_my_location">In My Location</string>
+    <string name="selected_cities">Selected Cities</string>
+    <string name="anywhere">Anywhere</string>
+    <string name="enter_city">Enter City</string>
+    <string name="enter_state">Enter State</string>
+    <string name="enter_pincode">Enter Pincode</string>
+    <string name="enter_phone_number">Enter Phone Number</string>
 
 </resources>
