Implemented Post AD Functionality
Implemented Post AD Functionality

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -38,7 +38,7 @@
     <string name="security_deposit">Security Deposit</string>
     <string name="daily_cost">Daily Cost</string>
     <string name="rent_value_details">Rent Value Details</string>
-    <string name="enter_email_id">Enter Email-Id</string>
+    <string name="enter_email_id">Enter Email Id</string>
     <string name="enter_password">Enter Password</string>
     <string name="forgot_password_">Forgot Password?</string>
     <string name="don_t_have_an_account_">Don\'t have an Account?</string>
@@ -89,20 +89,20 @@
     <string name="post_ad">Post Ad</string>
     <string name="tonnage">Tonnage</string>
     <string name="post_my_ad">Post My Ad</string>
-    <string name="what_would_you_like_to_post_an_ad_for_">What would you like to Post an Ad for?</string>
+    <string name="what_would_you_like_to_post_an_ad_for_">What is your Product?</string>
     <string name="select_product_category">Select Product Category</string>
     <string name="select_product_sub_category">Select Product Sub Category</string>
-    <string name="title_for_your_ad_">Title for your Ad*</string>
+    <string name="title_for_your_ad_">Title for your Product*</string>
     <string name="enter_title">Enter Title</string>
-    <string name="upload_photos_of_your_product">Upload Photos of your Product</string>
+    <string name="upload_photos_of_your_product">Select Photos of your Product</string>
     <string name="short_descrption_of_your_product">Short Descrption of your Product</string>
     <string name="enter_short_description">Enter Short Description</string>
     <string name="rate_your_product_condition">Rate your Product Condition</string>
     <string name="additional_details">Additional Details</string>
     <string name="any_instructions_to_be_followed_while_using_your_product_">Any instructions to be followed while using your product?</string>
-    <string name="enter_instructions">Enter Instructions</string>
+    <string name="enter_instructions">Eg: Handle with care and ensure it is switched off after using</string>
     <string name="any_other_stuff_in_the_package_">Any other Stuff in the Package?</string>
-    <string name="enter_stuff">Enter Stuff</string>
+    <string name="enter_stuff">Eg: Comes with a fancy external mouse and keyboard</string>
     <string name="control_type_and_capacity">Control, Type and Capacity</string>
     <string name="select_control">Select Control</string>
     <string name="select_type">Select Type</string>
@@ -110,16 +110,16 @@
     <string name="how_much_did_you_get_it_for_">How much did you get it for?*</string>
     <string name="enter_purchased_cost">Enter Purchased Cost</string>
     <string name="how_much_do_you_want_to_rent_it_for_">How much do you want to rent it for?*</string>
-    <string name="how_much_quantity_do_you_want_to_put_for_rent_">How much quantity do you want to put for rent?*</string>
+    <string name="how_much_quantity_do_you_want_to_put_for_rent_">Quantity available for rent?*</string>
     <string name="enter_rent_cost">Enter Rent Cost</string>
-    <string name="enter_monthly_rent_cost">Enter Monthly Rent Cost</string>
-    <string name="enter_weekly_rent_cost">Enter Weekly Rent Cost</string>
-    <string name="enter_daily_rent_cost">Enter Daily Rent Cost</string>
-    <string name="how_much_security_deposit_would_you_like_to_collect_per_product_">How much security deposit would you like to collect per product?</string>
+    <string name="enter_monthly_rent_cost">Monthly Cost</string>
+    <string name="enter_weekly_rent_cost">Weekly Cost</string>
+    <string name="enter_daily_rent_cost">Daily Cost</string>
+    <string name="how_much_security_deposit_would_you_like_to_collect_per_product_">What would be the Security Deposit?</string>
     <string name="enter_security_deposit">Enter Security Deposit</string>
     <string name="contact_number">Contact Number</string>
     <string name="clear">Clear</string>
-    <string name="documents_address">Documents &amp; Address</string>
+    <string name="documents_address">Product Address</string>
     <string name="document_type">Document Type</string>
     <string name="product_address_is_same_as_current_address_">Product address is same as current address.</string>
     <string name="enter_address">Enter Address</string>
@@ -136,5 +136,12 @@
     <string name="enter_phone_number">Enter Phone Number</string>
     <string name="home">Home</string>
     <string name="loading_">Loading...</string>
+    <string name="select_rating">Select Rating</string>
+    <string name="current_address">Current Address</string>
+    <string name="select_city">Select City</string>
+    <string name="upload">Upload</string>
+    <string name="forgot_password">Forgot Password ?</string>
+    <string name="submit">Submit</string>
+    <string name="edit">Edit</string>
 
 </resources>
