Changed Logo and Added Titles for Post Ad Preview Addres
Changed Logo and Added Titles for Post Ad Preview Addres

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -147,5 +147,8 @@
     <string name="title_">Title:</string>
     <string name="posted_by_">Posted By:</string>
     <string name="logged_user_">Logged User</string>
+    <string name="address_">Address:</string>
+    <string name="city_">City:</string>
+    <string name="state_">State:</string>
 
 </resources>
