--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -95,7 +95,7 @@
     <string name="title_for_your_ad_">Title for your Product*</string>
     <string name="enter_title">Enter Title</string>
     <string name="upload_photos_of_your_product">Select Photos of your Product</string>
-    <string name="short_descrption_of_your_product">Short Descrption of your Product</string>
+    <string name="short_descrption_of_your_product">Short Description of your Product</string>
     <string name="enter_short_description">Enter Short Description</string>
     <string name="rate_your_product_condition">Rate your Product Condition</string>
     <string name="additional_details">Additional Details</string>
