--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -168,5 +168,10 @@
     <string name="or">Or</string>
     <string name="facebook">Facebook</string>
     <string name="google">Google</string>
+    <string name="select_user_type">Select User Type</string>
+    <string name="enter_pan_card_number">Enter PAN Card Number</string>
+    <string name="sign_up_to_proceed">Sign up to proceed</string>
+    <string name="signup_with_email">Sign up with Email</string>
+    <string name="proceed_to_continue">Proceed to Continue</string>
 
 </resources>
