--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -184,5 +184,16 @@
     <string name="policy_info">Policy Info</string>
     <string name="price_per_week">Price per Week</string>
     <string name="price_per_month">Price per Month</string>
+    <string name="your_preferred_minimum_period_for_rent">Your preferred Minimum Period for rent*</string>
+    <string name="select_rent_period">Select Rent Period</string>
+    <string name="rent_per_day">Rent per day</string>
+    <string name="rent_per_day_if_rented_for_3_days_">Rent per day (if rented for 3 Days)</string>
+    <string name="rent_per_week">Rent per week</string>
+    <string name="rent_per_month">Rent per Month</string>
+    <string name="rent_per_month_if_rented_for_3_months_">Rent per Month (if rented for 3 Months)</string>
+    <string name="rent_per_month_if_rented_for_6_months_">Rent per month (if rented for 6 Months)</string>
+    <string name="rent_per_month_if_rented_for_9_months_">Rent per month (if rented for 9 Months)</string>
+    <string name="rent_per_month_if_rented_for_12_months_">Rent per month (if rented for 12 Months)</string>
+    <string name="eg_in_between_1_the_price_of_purchase">Eg: In between 1 &amp; the price of purchase</string>
 
 </resources>
